# BDX-HOSTING-SERVER

./: .replit  pnpm-lock.yaml  pyproject.toml
artifacts/api-server/src/routes/: dashboard.ts  index.ts  plans.ts  servers.ts  users.ts
artifacts/bdx-python/: .env.example  DEPLOY.md  auth.py  db.py  main.py  nixpacks.toml  railway.json  requirements.txt
artifacts/bdx-python/.replit-artifact/: artifact.toml
artifacts/bdx-python/static/: style.css
artifacts/bdx-python/templates/: base.html  console.html  index.html  login.html  servers.html  signup.html
artifacts/bdx-python/templates/admin/: plans.html  servers.html  users.html
artifacts/hosting-panel/: index.html  package.json
artifacts/hosting-panel/.replit-artifact/: artifact.toml
artifacts/hosting-panel/src/: App.tsx  index.css  types.ts
artifacts/hosting-panel/src/components/: layout.tsx
artifacts/hosting-panel/src/pages/: console.tsx  dashboard.tsx  servers.tsx
artifacts/hosting-panel/src/pages/admin/: plans.tsx  servers.tsx  users.tsx
lib/api-spec/: openapi.yaml
lib/db/src/schema/: hosting.ts  index.ts
