[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi>=0.136.1",
    "jinja2>=3.1.6",
    "psycopg2-binary>=2.9.12",
    "python-dotenv>=1.2.2",
    "sse-starlette>=3.4.1",
    "uvicorn[standard]>=0.46.0",
]
